# ThirstyTherapy

./: .eslintignore  .eslintrc.js  .gitignore  .glitch-assets  .lintstagedrc.js  .prettierignore  .prettierrc.js  .stylelintrc.json  README.md  elder.config.js  package-lock.json  package.json  postcss.config.js  rollup.config.js  rush.json  shrinkwrap.yaml  tailwind.config.js  watch.json
apps/browser-sources/: .eslintrc.js  .stylelintrc.json  README.md  netlify.toml  package-lock.json  package.json  rollup.config.js  tailwind.config.js
apps/browser-sources/public/: global.css  index.html
apps/browser-sources/src/: Admin.svelte  AgendaItem.svelte  App.svelte  Model.ts  (+12 more)
apps/database/: .gitignore  Cargo.toml  README.md
apps/noblebittersco.com/: README.md  netlify.toml  nuxt.config.js  package-lock.json  package.json
apps/thirstytherapy.com/: .eslintignore  .gitignore  README.md  netlify.toml  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
apps/www/: .eslintrc.js  .stylelintrc.json  netlify.toml  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
assets/: style.css
common/git-hooks/: pre-commit
config/obs-studio/: Cargo.toml  README.md  rust-toolchain.toml  sync
public/: index.html
server/: index.js
src/: AgendaItem.svelte  App.svelte  Collapsible.svelte  Episode.svelte  SelectEpisode.svelte  Tailwindcss.svelte  models.ts  template.html
src/components/: Nav.svelte  UpcomingIngredients.svelte
src/layouts/: Layout.svelte
src/routes/: _layout.svelte  classes.svelte  index.svelte  livestream.svelte
(+61 files in other folders)
