[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1.1"
itertools = "^0.10.3"
serde = { version = "^1", features = ["derive"] }
strum = { version = "^0.24", features = ["derive"] }
